feat: reassignment postgres logic
